# chess-gui

./: README.md  chess_gui.py  main.py  pyproject.toml  tests.py  todolist.todo
chess_board/: __init__.py  base.py  bishops.py  board.py  chess_board.py  constants.py  kings.py  knights.py  pawns.py  pieces.py  players.py  queens.py  rooks.py  types.py
chess_board/piece/: __init__.py  bishop.py  groups.py  king.py  knight.py  pawn.py  queen.py  rook.py
piece/: __init__.py  bishop.py  king.py  knight.py  pawn.py  queen.py  rook.py
piece/bishop/: __init__.py  black_bishop.py  white_bishop.py
piece/king/: __init__.py  black_king.py  white_king.py
piece/knight/: __init__.py  black_knight.py  white_knight.py
piece/pawn/: __init__.py  black_pawn.py  white_pawn.py
piece/queen/: __init__.py  black_queen.py  white_queen.py
piece/rook/: __init__.py  black_rook.py  white_rook.py
players/: opponent.py  player.py
