[tool.poetry]
name = "chess-gui"
version = "0.1.0"
description = ""
authors = ["invalid-jess <jessgaming55@gmail.com>"]
readme = "README.md"
packages = [{include = "chess_gui"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
